--- a/Doxygen documentation/html/index.html
+++ b/Doxygen documentation/html/index.html
@@ -20,9 +20,8 @@
 <table cellspacing="0" cellpadding="0">
  <tbody>
  <tr id="projectrow">
-  <td id="projectlogo"><img alt="Logo" src="Logo.png"/></td>
   <td id="projectalign">
-   <div id="projectname">X-Tetris<span id="projectnumber">&#160;Final02</span>
+   <div id="projectname">X-Tetris<span id="projectnumber">&#160;1.0</span>
    </div>
    <div id="projectbrief">X-Tetris</div>
   </td>
