--- a/Doxygen documentation/html/md__c___users_vinee__one_drive__desktop__uni__programmazione_e__laboratorio__progetto_esame__a_n_s_i__c__x__tetris__r_e_a_d_m_e.html
+++ b/Doxygen documentation/html/md__c___users_vinee__one_drive__desktop__uni__programmazione_e__laboratorio__progetto_esame__a_n_s_i__c__x__tetris__r_e_a_d_m_e.html
@@ -21,7 +21,7 @@
  <tbody>
  <tr id="projectrow">
   <td id="projectalign">
-   <div id="projectname">X-Tetris<span id="projectnumber">&#160;Final02</span>
+   <div id="projectname">X-Tetris<span id="projectnumber">&#160;1.0</span>
    </div>
    <div id="projectbrief">X-Tetris</div>
   </td>
